# Raytracer

raytracer/: CMakeLists.txt  README.md  project-2d-raytracer.md
raytracer/src/: Camera.h  Coordinate.h  Grid.cpp  Grid.h  Ray.cpp  Ray.h  Screen.h  main.cpp
